# srtgo

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: 버그-리포트.md
.github/workflows/: python-publish.yml
srtgo/: __init__.py  ktx.py  srt.py  srtgo.py
